reset password chapter 12

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -107,3 +107,18 @@ en:
       say_hi: "Hi"
       email_content: "Welcome to the Sample App! Click on the link below to activate your account:"
       activate_link: "Activate"
+    password:
+      reset_title: "Forget password?"
+      reset_link: "Reset password"
+      get_email_page_title: "Forgot password"
+      submit_email: "Submit"
+      email_subject: "Password reset"
+      email_info: "Email sent with password reset instructions."
+      invalid_email: "Email address not found."
+      email_content1: "To reset your password click the link below:"
+      email_content2: "This link will expire in two hours."
+      email_content3: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+      update_pass: "Update password"
+      password_empty: "Can't be empty."
+      password_reseted: "Password has been reset."
+      password_expired: "Password reset has expired."
