--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,34 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   layouts:
     application:
@@ -122,3 +91,20 @@ en:
       password_empty: "Can't be empty."
       password_reseted: "Password has been reset."
       password_expired: "Password reset has expired."
+  microposts:
+    view:
+      post: "Posted"
+      ago: "ago."
+      post_count: "Microposts"
+      success_post: "Micropost created!"
+      view_profile: "view my profile"
+      post_plural: "micropost"
+      new_post: "Compose new micropost..."
+      post_post: "Post"
+      post_feed: "Micropost Feed"
+      delete_post: "delete"
+      delete_confirm: "You sure?"
+      delete_success: "Micropost deleted"
+      less_size: "should be less than 5MB"
+      max_size: "Maximum file size is 5MB. Please choose a smaller file."
+      change: "change"
